--- a/alumni_website/static/core/css/css.css
+++ b/alumni_website/static/core/css/css.css
@@ -98,7 +98,26 @@ h3 {
   font-size: 2rem;
 }
 
-
+@media (max-width: 767px) {
+  .main-nav .navbar-nav {
+    text-align: center !important;
+  }
+  
+  .logo {
+    height: 40px !important; 
+  }
+}
+@media (max-width: 767px) {
+  .profile-img-container {
+    height: 250px !important; 
+  }
+  
+  .profilePic {
+    width: 150px !important;
+    height: 150px !important;
+    border-width: 3px !important;
+  }
+}
 
 
 
