--- a/alumni_website/templates/profiles/profile.html
+++ b/alumni_website/templates/profiles/profile.html
@@ -20,7 +20,7 @@
 
 
 
-<div class="col-12 col-md-4 col-lg-3 sidebar-wrapper">
+<div class="col-12 col-md-4 col-lg-3 sidebar-wrapper" data-aos="fade-up" data-aos-delay="100">
   <div class="sidebar">
     <h2>Connection Requests</h2>
     <div class="contact-list">
@@ -63,7 +63,7 @@
 
 
 
-<div class="col-12 col-md-8 col-lg-9 profile-container" data-aos="fade-up">
+<div class="col-12 col-md-8 col-lg-9 profile-container" data-aos="fade-up" data-aos-delay="200">
 
   {% if request.GET.message %}
     <div class="alert alert-danger">{{ request.GET.message }}</div>
