--- a/alumni_website/templates/authentication/sign_up.html
+++ b/alumni_website/templates/authentication/sign_up.html
@@ -12,13 +12,14 @@
 
 {% block main %}
 
-    {% if messages %}
-        <div class="alert alert-danger">
-            {% for message in messages %}
-                <p>{{ message }}</p>
-            {% endfor %}
-        </div>
-    {% endif %}
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  {% endfor %}
+{% endif %}
 
     <div class="main-content">
     <div class="container container-form">
