--- a/alumni_website/templates/profiles/profile.html
+++ b/alumni_website/templates/profiles/profile.html
@@ -81,7 +81,7 @@
         {% if profile.has_job %}
             {{ profile.role }} at {{ profile.employer }}
         {% else %}
-            {{ profile.university }} at {{ profile.major_uni }}
+            {{ profile.major_uni }} at {{ profile.university }}
         {% endif %}
         </p>
     </div>
