--- a/alumni_website/templates/notifications/activation_email.html
+++ b/alumni_website/templates/notifications/activation_email.html
@@ -35,6 +35,7 @@
                 Activate My Account
             </a>
         </div>
+        <p style="text-align: center;">⚠️ If email is in SPAM, remove it and then click the link</p>
         
         <div style="margin-top: 30px; text-align: center; color: #666; font-size: 14px;">
             This link will expire in 24 hours.
