--- a/alumni_website/templates/layout.html
+++ b/alumni_website/templates/layout.html
@@ -31,10 +31,10 @@
   <ul class="navbar-nav">
     {% if user.is_authenticated %}
 
-      <!-- Dashboard -->
+      <!-- Your Space -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Dashboard
+          Your Space
         </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{% url 'home' %}">Home</a></li>
@@ -58,10 +58,10 @@
         </ul>
       </li>
 
-      <!-- Explore -->
+      <!-- Members -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Explore
+          Members
         </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{% url 'directory' %}">Search Alumni</a></li>
