--- a/alumni_website/templates/core/home.html
+++ b/alumni_website/templates/core/home.html
@@ -12,6 +12,19 @@
 
 {% block main %}
 
+
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" style="margin-top: 0.5rem; text-align: center;">
+      {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  {% endfor %}
+{% endif %}
+
+
+
+
     <div class="top-header"></div>
 
 
