--- a/alumni_website/templates/profiles/view_profile.html
+++ b/alumni_website/templates/profiles/view_profile.html
@@ -259,6 +259,8 @@
     </div>
   </div>
 
+
+  {% if profile.skils %}
   <div class="section" data-aos="fade-up" data-aos-delay="100">
     <div class="section-header d-flex justify-content-between align-items-center mb-3">
       <h3>Skills</h3>
@@ -287,6 +289,7 @@
       {% endfor %}
     </div>
   </div>
+  {% endif %}
 
 
 
